# HFMF

./: .gitignore  README.md  calibration_module.py  deepfake_detection.py  pyproject.toml
Ensembling/: Ensembling-WildRF.ipynb  ensemble.py
Module1/: Module 1.ipynb  Module1_feature_extraction.py
Module1/ViTs/: ViTb16_Finetuned.py
